--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Science -- Periodicals'
 - !lcc 'T'
 - !lcsh 'Technology -- Periodicals'
+- GITenberg
 title: 'Scientific  American, Volume XXXVI., No. 8, February 24, 1877
 
   A Weekly Journal of Practical Information, Art, Science,
